--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --es-module-specifier-resolution=node index.js"
+    "dev": "nodemon --es-module-specifier-resolution=node app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "axios": "^1.2.1"
+    "axios": "^1.2.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
